# AI-AND-ROBOT-BOOK5-BACKEND

./: .env.example  .gitignore  PROJECT.md  README.md  check_qdrant.py  clear_qdrant.py  health_check.py  index_book_to_qdrant.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_chunk_fix.py
app/: config.py  database.py  embeddings.py  gemini_client.py  logging_config.py  main.py  models.py  progress_service.py  rag.py  schemas.py  security.py  validation.py  vector_db.py
app/scripts/: index_markdown.py
tests/: test_rag.py
